--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,15 +7,8 @@ website:
     left:
       - href: index.qmd
         text: Home
-      - text: Posts
-        menu:
-          - href: posts/finger_exercises.ipynb
-            text: Finger Exercises
-          - href: posts/Floating-Point.ipynb
-            text: Floating Point Arithmetics
-          - href: posts/lists_mutability_cloning.ipynb
-            text: Lists, Mutability and Cloning
-
+  sidebar:
+    contents: reports
 format:
   html:
     theme:
