--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,7 @@ project:
   type: website
 
 website:
-  title: "quartoblog"
+  title: "My Datascience Portfolio"
   navbar:
     left:
       - href: index.qmd
